--- a/public/index.jade
+++ b/public/index.jade
@@ -1,6 +1,8 @@
 h1 Welcome to Harp.
 h3 This is yours to own. Enjoy.
 .testing this is a test
+.testing this is another test
+.testing and another one 
 
 ul
 each p in partners
