--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -3,4 +3,6 @@ html
   head
     link(rel="stylesheet" href="/main.css")
   body
+    != partial("_header")
     != yield
+    != partial("_footer")
