--- a/public/index.jade
+++ b/public/index.jade
@@ -9,6 +9,13 @@ each p in partners
   li !{p.name}
     | is #{p.age}
 
+a.button.is-primary Primary
+a.button.is-link Link
+a.button.is-info Info
+a.button.is-success Success
+a.button.is-warning Warning
+a.button.is-danger Danger
+
 :markdown
   # now I can write Markdown here
 
