--- a/public/main.sass
+++ b/public/main.sass
@@ -1,2 +1,20 @@
-.testing
-  color: #00ddaa
+// Import Bulma's core
+@import ../node_modules/bulma/sass/utilities/_all
+
+// Set your colors
+$primary: #8c67ef
+$primary-invert: findColorInvert($primary)
+$twitter: #4099FF
+$twitter-invert: findColorInvert($twitter)
+
+// Setup $colors to use as bulma classes (e.g. 'is-twitter')
+$colors: ("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "info": ($info, $info-invert), "success": ($success, $success-invert), "warning": ($warning, $warning-invert), "danger": ($danger, $danger-invert), "twitter": ($twitter, $twitter-invert))
+
+// Links
+$link: $primary
+$link-invert: $primary-invert
+$link-focus-border: $primary
+
+// Import Bulma and Buefy styles
+@import ../node_modules/bulma/bulma
+@import ../node_modules/buefy/src/scss/buefy
