--- a/public/index.jade
+++ b/public/index.jade
@@ -20,9 +20,14 @@ a.button.is-danger Danger
   # now I can write Markdown here
 
   This is my Markdown post.
+
   1. Chocolate
   2. Strawberry
   3. Vanilla
+
+  This is some **text** with a [FuseSource](http://fusesource.com) link.    
+//- :coffeescript
+//-   alert "Hello, Coffee!"
 
 img(src='e3f.png')
 
