changed data and added package.json

--- a/public/index.jade
+++ b/public/index.jade
@@ -5,7 +5,7 @@ h3 This is yours to own. Enjoy.
 .testing makin bacon pancakes 
 
 ul
-each p in partners
+each p in people
   li !{p.name}
     | is #{p.age}
 
