--- a/public/index.jade
+++ b/public/index.jade
@@ -29,6 +29,9 @@ a.button.is-danger Danger
 //- :coffeescript
 //-   alert "Hello, Coffee!"
 
+//- this prints to console
+- console.log('testing')
+
 img(src='e3f.png')
 
 pre #{ JSON.stringify(public, null, '\t') }
