--- a/public/index.jade
+++ b/public/index.jade
@@ -1,6 +1,9 @@
 h1 Welcome to Harp.
 h3 This is yours to own. Enjoy.
 
+//- != partial("_test")
+!= partial("_vue")
+
 .testing bacon pancakes 
 .testing makin bacon pancakes 
 
